all file are modified and more perfect user interface stage one(not adding images)